[Terry N.] Regrettably, roll back upgrade to JGraph 5.14.0.  Too many strange graph rendering issues to track down and make better.  Will experiment on a separate build before attempting to upgrade.
git-svn-id: svn+ssh://eos.nps.edu/usr/local/svn/wcm/Viskit/trunk@2323 0de750ab-c0a9-dc11-9d74-0011435b89d6